# Rusty

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/migrations/: 20250505223811_create_users.sql  20250506010846_create_messages.sql  20250506013911_rooms.sql  20250506171658_schema.sql
backend/src/: db.rs  main.rs  routes.rs  state.rs
backend/src/auth/: current_user.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs
backend/src/models/: messages.rs  mod.rs  relationships.rs  rooms.rs  user.rs
backend/src/route_handlers/: friendships.rs  me.rs  messages.rs  mod.rs  relationships.rs  req_friends.rs  room.rs  rooms.rs  users.rs  ws.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/components/: AuthProvider.tsx  Navbar.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/friends/: page.tsx
frontend/src/app/dashboard/rooms/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/me/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AddFriendForm.tsx  ChatLayout.tsx  CreateRoomForm.tsx  FriendList.tsx  MessageInput.tsx  MessageList.tsx  Navbar.tsx  RoomList.tsx  RoomListItem.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useChatSocket.ts  useUser.ts
frontend/src/lib/: api.ts  useDMWebSocket.ts  useWebSocket.ts
frontend/src/utils/: api.ts  auth.ts  socket.ts
(+2 files in other folders)
