[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version ="0.8.4" , features = ["ws","macros"]}
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5.2"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4","serde"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "uuid", "macros","time"] }
dotenvy = "0.15"
thiserror = "2.0.12"
tracing-subscriber = "0.3"
chrono = {version = "0.4.41" , features =["serde"]}
argon2 = "0.5"
rand_core = "0.9.3"
async-trait = "0.1"
time = { version = "0.3", features = ["serde"] }
futures-util = "0.3"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.3.1"
lazy_static = "1.4"
once_cell = "1.18"